@@ -1,5 +1,10 @@
 2014-05-08  polarnik  <owasp@ya.ru>
 
+	* LoaderFunction.cs:
+	* LoaderEDocType.cs: 
+
+2014-05-08  polarnik  <owasp@ya.ru>
+
 	* LoaderAll.cs: 
 
 2014-03-29  polarnik  <owasp@ya.ru>
